--- a/openhydorah/CMakeLists.txt
+++ b/openhydorah/CMakeLists.txt
@@ -12,4 +12,10 @@ find_package(SDL2 REQUIRED)
 if (${SDL_FOUND})
 	include_directories(${SDL_INCLUDE_DIR})
 	target_link_libraries(hydorah ${SDL_LIBRARY})
-endif()
+endif ()
+
+find_package(PhysFS REQUIRED)
+if (${PHYSFS_FOUND})
+	include_directories(${PHYSFS_INCLUDE_DIR})
+	target_link_libraries(hydorah ${PHYSFS_LIBRARY})
+endif ()
