Added PNG dependency to CMake

--- a/openhydorah/CMakeLists.txt
+++ b/openhydorah/CMakeLists.txt
@@ -43,3 +43,10 @@ if (${PHYSFS_FOUND})
 	include_directories(${PHYSFS_INCLUDE_DIR})
 	target_link_libraries(hydorah ${PHYSFS_LIBRARY})
 endif ()
+
+find_package(PNG REQUIRED)
+if (${PNG_FOUND})
+	include_directories(${PNG_INCLUDE_DIRS})
+	target_link_libraries(hydorah ${PNG_LIBRARIES})
+	add_definitions(${PNG_DEFINITIONS})
+endif ()
