Added LibXML2 to CMake

--- a/openhydorah/CMakeLists.txt
+++ b/openhydorah/CMakeLists.txt
@@ -50,3 +50,10 @@ if (${PNG_FOUND})
 	target_link_libraries(hydorah ${PNG_LIBRARIES})
 	add_definitions(${PNG_DEFINITIONS})
 endif ()
+
+find_package(LibXml2 REQUIRED)
+if (${LIBXML2_FOUND})
+	include_directories(${LIBXML2_INCLUDE_DIR})
+	target_link_libraries(hydorah ${LIBXML2_LIBRARIES})
+	add_definitions(${LIBXML2_DEFINITIONS})
+endif ()
