A bunch of stuff

--- a/openhydorah/CMakeLists.txt
+++ b/openhydorah/CMakeLists.txt
@@ -3,7 +3,7 @@ project (OpenHydorah)
 
 add_subdirectory(hyd_engine)
 
-set (SRC_LIST main.d game.d)
+set (SRC_LIST main.d game.d intro.d main_menu.d player.d projectile.d enemy.d)
 
 foreach (i ${SRC_LIST})
 	set (SRC "${SRC} ${CMAKE_CURRENT_SOURCE_DIR}/src/${i}")
@@ -15,3 +15,8 @@ set (RUN_SCRIPT "rdmd ${D_FLAGS} ${SRC}")
 
 file (WRITE ${CMAKE_CURRENT_BINARY_DIR}/build.sh ${BUILD_SCRIPT})
 file (WRITE ${CMAKE_CURRENT_BINARY_DIR}/run.sh ${RUN_SCRIPT})
+
+if (VOGL_PATH)
+	set(VOGL_SCRIPT "#!/bin/bash\nexport LD_PRELOAD=${VOGL_PATH}/libvogltrace64.so\n${VOGL_PATH}/vogleditor64")
+	file (WRITE ${CMAKE_CURRENT_BINARY_DIR}/vogl.sh ${VOGL_SCRIPT})
+endif()
